@@ -1296,7 +1296,9 @@ class TRDA(TextFrame): "Recording Dates"
 class TRSN(TextFrame): "Internet Radio Station Name"
 class TRSO(TextFrame): "Internet Radio Station Owner"
 class TSIZ(NumericTextFrame): "Size of audio data (bytes)"
+class TSO2(TextFrame): "iTunes Album Artist Sort"
 class TSOA(TextFrame): "Album Sort Order key"
+class TSOC(TextFrame): "iTunes Composer Sort"
 class TSOP(TextFrame): "Perfomer Sort Order key"
 class TSOT(TextFrame): "Title Sort Order key"
 class TSRC(TextFrame): "International Standard Recording Code (ISRC)"
